[package]
name = "wasm"
version = "0.1.0"
authors = ["LTKSK <ltksk0714@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "^0.2.63", features = ["serde-serialize"] }
js-sys = "0.3.40"
wasm-bindgen-futures = "0.4.13"
serde = { version = "1.0.80", features = ["derive"] }
serde_derive = "^1.0.59"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'Text',
  'HtmlElement',
  'HtmlDivElement',
  'HtmlCanvasElement',
  'Node',
  'Window',
  'CssStyleDeclaration',
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'CanvasRenderingContext2d',
  'ImageData',
  'MouseEvent'
]

